--- a/x&o/xo_press/style.css
+++ b/x&o/xo_press/style.css
@@ -53,13 +53,13 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(138, 46, 46, 0.8);
+    background: rgba(0, 0, 0, 0.8);
     justify-content: center;
     align-items: center;
   }
   
   .result-content {
-    background: #000000;
+    background: #fff;
     padding: 20px;
     border-radius: 5px;
     text-align: center;
